--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">This is for my specil one..!</span><br>
+                    <span class="say">This is for my special one..!</span><br>
                     <span class="say"></span><br>
                     <span class="say">Aisi kya jaadu ki hai tumne..</span><br>
                     <span class="say"></span><br>
